# coding-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
coding_assistant/benchmark/: bench_attention.py  bench_model.py  bench_moe.py
coding_assistant/benchmark/utils/: __init__.py  layer_statistics.py  utils.py
coding_assistant/experiments/expert_counting/: expert_counter.py  modeling_deepseek.py
coding_assistant/experiments/expert_prefetching/: expert_prefetcher.py  modeling_deepseek.py
coding_assistant/experiments/flash_attn_optimization/: flash_attn_cache.py  flash_attn_optimizer.py  modeling_deepseek.py
coding_assistant/experiments/utils/: __init__.py  utils.py
coding_assistant/models/: __init__.py  abstract_model.py  huggingface_model.py  model_factory.py  sglang_model.py  vllm_model.py
